<resources>
    <string name="app_name">Proyecto_Agenda</string>
    <string name="preferences_file">bootcamp.cl.proyecto_Agenda.PREFERENCES_FILE_KEY</string>
    <string name="login">Ingresar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="mail">Mail</string>
    <string name="ingreseContraseña">Ingrese una contraseña</string>
    <string name="ingreseMail">Ingrese su mail</string>
    <string name="crearPass">Crear contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="aceptaTerminos">Acepto los terminos y condiciones de uso</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="user">Usuario</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="citas_medicas">Citas medicas</string>
    <string name="citas_a_examenes">Citas a examenes</string>
    <string name="indicaciones">Indicaciones</string>
    <string name="nombre_medicamento">Nombre medicamento</string>
    <string name="indication_example">Indicaciones</string>
    <string name="add_meds">Agregar medicamento</string>
    <string name="delete_meds">Eliminar medicamento</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_nueva_cita">Agregar nueva cita</string>
    <string name="nombre_del_profecional">Nombre del profecional</string>
    <string name="especialidad">Especialidad</string>
    <string name="fechaYHora">Fecha y hora</string>
    <string name="hora">Hora</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="en_implementacion">En implementacion</string>
    <string name="fecha">Fecha</string>
    <string name="guardado_exitoso">Guardado exitoso</string>
    <string name="aceptar">Aceptar</string>
    <string name="cita_medica_guardada">Cita medica guardada exitosamente</string>
    <string name="cita_examen_guardada">Cita a examen guardada exitosamente</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipo_de_examen">Tipo de examen</string>
    <string name="indicaciones_examen">Indicaciones para el examen:</string>
    <string name="agregar_indicacion">Agregar indicacion</string>
    <string name="Diagnostico">Diagnostico</string>
    <string name="ver_indicaciones">Ver indicaciones</string>
</resources>