<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">


        <TextView
            android:id="@+id/LoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/login"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/enterMailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LoginTitle"
            android:layout_centerVertical="true"
            android:layout_marginTop="237dp"
            android:gravity="center"
            android:text="@string/mail"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/setMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/enterMailText"
            android:gravity="center"
            android:hint="@string/ingreseMail" />

        <TextView
            android:id="@+id/enterPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setMail"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/contrase_a"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/enterPasswordText"
            android:hint="@string/ingreseContraseña"
            android:gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_button_background"
            android:layout_alignParentBottom="true"
            android:text="@string/ingresar"
            android:textSize="30sp"

            />


    </RelativeLayout>
</layout>