<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccount">


        <TextView
            android:id="@+id/createAccounTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:text="@string/crear_cuenta"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setMailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createAccounTitle"
            android:layout_centerVertical="true"
            android:layout_marginTop="237dp"
            android:gravity="center"
            android:text="@string/mail"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/setMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/setMailText"
            android:gravity="center"
            android:hint="@string/ingreseMail" />

        <TextView
            android:id="@+id/setPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setMail"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/crearPass"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/setPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/setPasswordText"
            android:hint="@string/ingreseContraseña"
            android:gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_button_background"
            android:layout_alignParentBottom="true"
            android:text="@string/crear_cuenta"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:text="@string/aceptaTerminos"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setPassword"
            android:layout_centerInParent="true"


            android:layout_marginTop="78dp" />


    </RelativeLayout>
</layout>