<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default"
        android:background="@drawable/fondolayout"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDocName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/nombre_del_profecional"
            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newDocName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSpecialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/especialidad"
            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newSpecialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/fecha"
            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        //Aqui va el date picker
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:clickable="false"
            android:focusable="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/hora"
            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/ubicacion"
            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/btnAddNewDocAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            android:textStyle="bold"
            android:textSize="30dp"/>

    </LinearLayout>
</layout>