<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondolayout">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/common_padding_default"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:elevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/medicamentos"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/btnMeds"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/_medication_24"
                    android:scaleType="fitCenter"
                    android:focusable="true"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:elevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/citas_medicas"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/btnAppointments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/_medical_services_24"
                    android:scaleType="fitCenter"
                    android:focusable="true"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:elevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/citas_a_examenes"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/btnTestAppointments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/_medical_test_24"
                    android:scaleType="fitCenter"
                    android:focusable="true"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:elevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/indicaciones"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/btnPrescriptions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/_note_add_24"
                    android:scaleType="fitCenter"
                    android:focusable="true"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>